slim down the container